<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinema_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_url"
        android:layout_width="163dp"
        android:layout_height="244dp"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/carousel_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewContainer" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gt_sectra_font"
        android:gravity="center"
        android:text="@string/text_harry_potter"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_url" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_500"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="#C6C6C6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/_4_8"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/montserrat_500"
        android:text="@string/_2390"
        android:textColor="#AEACAC"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/rate"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/rate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/price"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/left_button"
        android:fontFamily="@font/montserrat_700"
        android:text="@string/_19_99"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/right_button"
        android:fontFamily="@font/montserrat_700"
        android:text="@string/free_preview"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rate" />


    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_also_like"
        android:textColor="@color/white"
        android:layout_marginTop="53dp"
        android:layout_marginStart="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:fontFamily="@font/montserrat_600">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_carousel"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="53dp"
        android:clipToPadding = "false"
        android:layout_marginStart="29dp"
        tools:listitem="@layout/like_item"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>