<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_url"
        android:layout_width="71dp"
        android:layout_height="106dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/carousel_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf=""
        app:shapeAppearanceOverlay="@style/roundedImageView">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/title"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/gt_sectra_font"
        android:includeFontPadding="false"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_harry_potter"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/author"
        app:layout_constraintStart_toEndOf="@+id/image_url"
        app:layout_constraintTop_toTopOf="@id/image_url"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="#ACABAB"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_500"
        android:includeFontPadding="false"
        android:text="@string/author"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/image_url"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_700"
        android:includeFontPadding="false"
        android:text="@string/_19_99"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/image_url"
        app:layout_constraintStart_toEndOf="@+id/image_url"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:fontFamily="@font/montserrat_500"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:text="@string/_4_8"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/price" />


    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textColor="#C3C2C2"
        android:fontFamily="@font/montserrat_400"
        android:includeFontPadding="false"
        android:text="@string/_2390"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="@+id/score"


        />


</androidx.constraintlayout.widget.ConstraintLayout>